--- a/first_next_app/package.json
+++ b/first_next_app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "first_next_app",
+  "name": "next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "next": "^12.1.6",
+    "react": "^18.1.0",
+    "react-css-modules": "^4.7.11",
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "sass": "^1.51.0"
   }
 }
